fix: Pos component not overlapping Info component on mobile

--- a/exo2-map/app/globals.css
+++ b/exo2-map/app/globals.css
@@ -33,3 +33,9 @@ main {
 	margin: 12px;
 	border-radius: 4px;
 }
+
+@media (max-width: 400px) {
+	.informations {
+		top: 70px;
+	}
+}
